animations is modified via javascript

--- a/index.html
+++ b/index.html
@@ -12,22 +12,7 @@
     <main class="">
 
         <header>
-            <!-- <h1>Rohit's Dev Hub</h1> -->
-             <h1>
-                <span>R</span>
-                <span>o</span>
-                <span>h</span>
-                <span>i</span>
-                <span>t</span>
-                <span>'</span>
-                <span>s</span>
-                <span>D</span>
-                <span>e</span>
-                <span>v</span>
-                <span>H</span>
-                <span>u</span>
-                <span>b</span>
-             </h1>
+             <h1 id="heading">Rohit'sDevHub</h1>
         </header>
     
         <div class="search-container">
